--- a/Model/rankingModel/model.ipynb
+++ b/Model/rankingModel/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,22 +21,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Data raw interaction user & recipes\n",
-    "interaction_data = pd.read_csv(\"../Dataset/RAW_interactions.csv\")\n",
-    "recipes_data = pd.read_csv(\"../Dataset/RAW_recipes.csv\")\n",
+    "interaction_data = pd.read_csv(\"../../Dataset/RAW_interactions.csv\")\n",
+    "recipes_data = pd.read_csv(\"../../Dataset/RAW_recipes.csv\")\n",
     "\n",
     "# Data Training & Validation\n",
-    "interaction_train = pd.read_csv(\"../Dataset/interactions_train.csv\")\n",
-    "interaction_test = pd.read_csv(\"../Dataset/interactions_test.csv\")"
+    "interaction_train = pd.read_csv(\"../../Dataset/interactions_train.csv\")\n",
+    "interaction_test = pd.read_csv(\"../../Dataset/interactions_test.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
        "4  Made the cheddar bacon topping, adding a sprin...  "
       ]
      },
-     "execution_count": 206,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
        "4  ['tomato juice', 'apple cider vinegar', 'sugar...              8  "
       ]
      },
-     "execution_count": 207,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,60 +444,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5\n",
-      "86/86 [==============================] - 16s 166ms/step - root_mean_squared_error: 1.3721 - loss: 1.8672 - regularization_loss: 0.0000e+00 - total_loss: 1.8672\n",
-      "Epoch 2/5\n",
-      "86/86 [==============================] - 20s 228ms/step - root_mean_squared_error: 0.9493 - loss: 0.9044 - regularization_loss: 0.0000e+00 - total_loss: 0.9044\n",
-      "Epoch 3/5\n",
-      "86/86 [==============================] - 19s 216ms/step - root_mean_squared_error: 0.9413 - loss: 0.8891 - regularization_loss: 0.0000e+00 - total_loss: 0.8891\n",
-      "Epoch 4/5\n",
-      "86/86 [==============================] - 10s 119ms/step - root_mean_squared_error: 0.9348 - loss: 0.8768 - regularization_loss: 0.0000e+00 - total_loss: 0.8768\n",
-      "Epoch 5/5\n",
-      "86/86 [==============================] - 16s 190ms/step - root_mean_squared_error: 0.9294 - loss: 0.8667 - regularization_loss: 0.0000e+00 - total_loss: 0.8667\n"
+      "Epoch 1/8\n",
+      "86/86 [==============================] - 12s 112ms/step - root_mean_squared_error: 1.8162 - loss: 3.2586 - regularization_loss: 0.0000e+00 - total_loss: 3.2586\n",
+      "Epoch 2/8\n",
+      "86/86 [==============================] - 3s 32ms/step - root_mean_squared_error: 0.9286 - loss: 0.8686 - regularization_loss: 0.0000e+00 - total_loss: 0.8686\n",
+      "Epoch 3/8\n",
+      "86/86 [==============================] - 3s 31ms/step - root_mean_squared_error: 0.9180 - loss: 0.8483 - regularization_loss: 0.0000e+00 - total_loss: 0.8483\n",
+      "Epoch 4/8\n",
+      "86/86 [==============================] - 3s 30ms/step - root_mean_squared_error: 0.9100 - loss: 0.8330 - regularization_loss: 0.0000e+00 - total_loss: 0.8330\n",
+      "Epoch 5/8\n",
+      "86/86 [==============================] - 2s 28ms/step - root_mean_squared_error: 0.9033 - loss: 0.8202 - regularization_loss: 0.0000e+00 - total_loss: 0.8202\n",
+      "Epoch 6/8\n",
+      "86/86 [==============================] - 2s 28ms/step - root_mean_squared_error: 0.8976 - loss: 0.8092 - regularization_loss: 0.0000e+00 - total_loss: 0.8092\n",
+      "Epoch 7/8\n",
+      "86/86 [==============================] - 2s 28ms/step - root_mean_squared_error: 0.8935 - loss: 0.8013 - regularization_loss: 0.0000e+00 - total_loss: 0.8013\n",
+      "Epoch 8/8\n",
+      "86/86 [==============================] - 2s 27ms/step - root_mean_squared_error: 0.8876 - loss: 0.7901 - regularization_loss: 0.0000e+00 - total_loss: 0.7901\n"
      ]
     }
    ],
    "source": [
     "model = RecipesModel()\n",
-    "model.compile(optimizer=tf.keras.optimizers.Adagrad(learning_rate=0.1))\n",
+    "model.compile(optimizer=tf.keras.optimizers.Adagrad(learning_rate=0.5))\n",
     "\n",
     "cached_train = train_data.shuffle(100_000).batch(8192).cache()\n",
-    "cached_test = test_data.batch(1000).cache()\n",
+    "cached_test = test_data.batch(5000).cache()\n",
     "\n",
     "# Train modelnya\n",
-    "epoch = 5\n",
+    "epoch = 8\n",
     "history = model.fit(cached_train, epochs=epoch)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13/13 [==============================] - 0s 17ms/step - root_mean_squared_error: 1.3512 - loss: 1.8807 - regularization_loss: 0.0000e+00 - total_loss: 1.8807\n"
+      "3/3 [==============================] - 1s 17ms/step - root_mean_squared_error: 1.3021 - loss: 1.8083 - regularization_loss: 0.0000e+00 - total_loss: 1.8083\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'root_mean_squared_error': 1.35123872756958,\n",
-       " 'loss': 2.3229103088378906,\n",
+       "{'root_mean_squared_error': 1.3021416664123535,\n",
+       " 'loss': 1.9944878816604614,\n",
        " 'regularization_loss': 0,\n",
-       " 'total_loss': 2.3229103088378906}"
+       " 'total_loss': 1.9944878816604614}"
       ]
      },
-     "execution_count": 214,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,16 +514,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor: shape=(1, 1), dtype=float32, numpy=array([[4.6750507]], dtype=float32)>"
+       "<tf.Tensor: shape=(1, 1), dtype=float32, numpy=array([[4.5858045]], dtype=float32)>"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,27 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Test modelnya\n",
-    "test_user_id = unique_userId[200]\n",
-    "\n",
-    "test_ratings = {}\n",
-    "for recipe in test_data.take(10):\n",
-    "\n",
-    "    recipeid = int(recipe[\"recipe_id\"].numpy())\n",
-    "    \n",
-    "    test_ratings[recipe[\"recipe_id\"].numpy()] = model({\n",
-    "        \"user_id\" : np.array([test_user_id]),\n",
-    "        \"recipe_id\" : np.array([str(recipeid)])\n",
-    "    })\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +616,7 @@
        "225877  ['great northern beans', 'yellow onion', 'dice...              9  "
       ]
      },
-     "execution_count": 227,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -649,24 +635,83 @@
      "output_type": "stream",
      "text": [
       "Top 10 Recipes for 450004 :\n",
-      "lemon herb chicken w mushrooms low carb, [[4.708283]]\n",
-      "blueberry pancake syrup   low carb, [[4.6905456]]\n",
-      "azumaya pot stickers, [[4.6898723]]\n",
-      "sweet and sour pork ribs, [[4.6874175]]\n",
-      "ww 3 points   grilled beef fajitas, [[4.6873007]]\n",
-      "breakfast biscuit sandwiches, [[4.685568]]\n",
-      "ranch egg salad croissant sandwiches, [[4.682342]]\n",
-      "peanut butter spirals, [[4.6740203]]\n",
-      "strawberry fudge, [[4.666068]]\n",
-      "skinny style chocolatey hot cocoa, [[4.658526]]\n"
+      "breakfast biscuit sandwiches, [[4.9134293]]\n",
+      "sweet and sour pork ribs, [[4.824863]]\n",
+      "skinny style chocolatey hot cocoa, [[4.8178554]]\n",
+      "lemon herb chicken w mushrooms low carb, [[4.8086576]]\n",
+      "ww 3 points   grilled beef fajitas, [[4.7357306]]\n",
+      "strawberry fudge, [[4.702412]]\n",
+      "ranch egg salad croissant sandwiches, [[4.6703973]]\n",
+      "peanut butter spirals, [[4.6430655]]\n",
+      "blueberry pancake syrup   low carb, [[4.6401615]]\n",
+      "azumaya pot stickers, [[4.625444]]\n"
      ]
     }
    ],
    "source": [
+    "# Test modelnya\n",
+    "test_user_id = unique_userId[200]\n",
+    "\n",
+    "test_ratings = {}\n",
+    "for recipe in test_data.take(10):\n",
+    "\n",
+    "    recipeid = int(recipe[\"recipe_id\"].numpy())\n",
+    "    \n",
+    "    test_ratings[recipe[\"recipe_id\"].numpy()] = model({\n",
+    "        \"user_id\" : np.array([test_user_id]),\n",
+    "        \"recipe_id\" : np.array([str(recipeid)])\n",
+    "    })\n",
+    "\n",
     "print(f\"Top 10 Recipes for {test_user_id} :\")\n",
     "for m, score in sorted(test_ratings.items(), key=lambda x :x[1], reverse=True):\n",
     "    title = recipes_data.loc[recipes_data[\"id\"] == int(m)][\"name\"].item()\n",
     "    print(f\"{title}, {score}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: export\\assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: export\\assets\n"
+     ]
+    }
+   ],
+   "source": [
+    "tf.saved_model.save(model, \"export\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "67310348"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "converter = tf.lite.TFLiteConverter.from_saved_model(\"export\")\n",
+    "tflite_model = converter.convert()\n",
+    "open(\"converted_model.tflite\", \"wb\").write(tflite_model)"
    ]
   }
  ],
